# ams-platform-ai

./: .env.example  .gitignore  .instructions.md  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  alembic.ini  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml
backend/: README.md
backend/alembic/: env.py
docs/: COMPLETE-PRODUCT-CONTEXT.md  CONTEXT-FILE-INDEX.md  README.md
docs/context/: 0-MASTER-CONTEXT-NAVIGATION.md  1-EXECUTIVE-SUMMARY.md  2-PRODUCT-SPECIFICATION.md  3-TECHNICAL-FOUNDATION.md  4-GETTING-STARTED.md
docs/diagrams/: 01-high-level-architecture.puml  02-technical-architecture-deepdive.puml  03-business-architecture.puml  04-release-roadmap-timeline.puml  05-feature-roadmap-detailed.puml  06-v2-advanced-ai-architecture.puml  07-deployment-scalability.puml  08-security-compliance.puml  AI-HR-MultiAgent-System.drawio  DIAGRAMS-QUICK-REFERENCE.md  README.md
docs/templates/: ARCHITECTURE-DECISION-RECORD.md  REQUIREMENT-TEMPLATE.md
docs/test/: ai_hr_full.drawio
docs/v1.0/: 01-PROJECT-OVERVIEW.md  02-BUSINESS-REQUIREMENTS.md  03-FUNCTIONAL-REQUIREMENTS.md  04-TECHNICAL-ARCHITECTURE.md  06-GLOSSARY.md  (+6 more)
frontend/: README.md
scripts/: install-local.ps1
services/: README.md
services/gateway/: Dockerfile  pyproject.toml
services/gateway/src/gateway_service/: auth.py  main.py  proxy.py  rate_limit.py  settings.py  validation.py
services/gateway/tests/: conftest.py  test_gateway.py
services/tool-service/: Dockerfile  pyproject.toml
services/tool-service/src/tool_service/: main.py  repository.py  routes.py
(+18 files in other folders)
