[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ams-gateway"
version = "0.1.0"
description = "AMS-AI API gateway (reverse proxy to domain microservices)"
requires-python = ">=3.11"
dependencies = [
    "ams-common",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0", "mypy>=1.13.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gateway_service = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["gateway_service"]
mypy_path = "src"
