[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ams-tool-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ams-common",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.28.0", "ruff>=0.8.0", "mypy>=1.13.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tool_service = ["py.typed"]
